replaced compass with sass in gruntfile, minor search alignment issue fix

--- a/themes/afterclass2/scss/layout/_search.scss
+++ b/themes/afterclass2/scss/layout/_search.scss
@@ -41,6 +41,7 @@
     background: none;
     box-shadow: none;
     margin:0;
+    margin-top: 2px;
 }
 
 #page_navigation #Search input:focus {
